# ponchi

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
crates/ponchi/: Cargo.toml
crates/ponchi-core/: Cargo.toml
crates/ponchi-core/src/: lib.rs  render.rs
crates/ponchi-wasm/: Cargo.toml
crates/ponchi-wasm/src/: lib.rs
crates/ponchi/src/: main.rs  server.rs
skills/ponchi/: SKILL.md
src/: backend.rs  input.rs  layout.rs  lib.rs  main.rs  raster.rs  render.rs  scene.rs  server.rs
viewer/: index.html
