[workspace]
members = ["crates/ponchi", "crates/ponchi-core", "crates/ponchi-wasm"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cappyzawa/ponchi"

[workspace.dependencies]
ponchi-core = { path = "crates/ponchi-core" }
roughr = "0.12"
usvg = "0.47"
resvg = "0.47"
tiny-skia = { version = "0.12", features = ["png-format"] }
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dagre = "0.1.1"
unicode-width = "0.2"
