[package]
name = "ponchi-wasm"
description = "WASM bindings for ponchi-core: render a scene JSON to a hand-drawn SVG string in the browser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ponchi-core.workspace = true
wasm-bindgen = "0.2"
# roughr -> rand -> getrandom needs the `js` backend to compile for
# wasm32-unknown-unknown. This lives only in the wasm crate so the platform-
# independent core never forces a JS dependency on native consumers.
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib"]
